feat: Update README for clarity and structure; enhance metadata cleaning explanation